<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LayoutsActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="128dp" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="289dp"
                android:layout_height="145dp"
                android:src="@drawable/relativa"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/linear"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/tablalayout"
                android:visibility="invisible" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="274dp"
                android:layout_height="224dp"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:gravity="center"
                android:text="@string/layoutRelativa"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editText1"
                android:layout_alignLeft="@+id/editText1"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:gravity="center"
                android:minEms="2"
                android:text="@string/textoLinear"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:gravity="center"
                android:text="@string/texttabla"
                android:visibility="invisible" >

                <requestFocus />
            </EditText>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.20" >

            <Button
                android:id="@+id/btnIzq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:text="@string/flechaIzq" />

            <Button
                android:id="@+id/btnDer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:text="@string/flechaDer" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>